--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <!--From https://codepen.io/frytyler/pen/EGdtg-->
 <head>
   <meta charset="UTF-8">
-  <title>ProfitPredictor API (50 Startups)</title>
+  <title>CustomerPredictor API (Social Media Adv)</title>
   <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Hind:300' rel='stylesheet' type='text/css'>
@@ -18,7 +18,7 @@
      <!-- Main Input For Receiving Query to our ML -->
     <form action="{{ url_for('predict')}}"method="post">
     	Enter Age: <input type="text" name="age" placeholder="Enter Age: " required="required" /><br>
-        Enter EstimatedSalary: <input type="text" name="sal" placeholder="Enter EstimatedSalary: " required="required" /><br>
+        Enter Salary: <input type="text" name="sal" placeholder="Enter Salary: " required="required" /><br>
 	    <button type="submit" class="btn btn-primary btn-block btn-large">Predict Purchased</button>
     </form>
 
